Implemented upto Self Transaction
